2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #50630: Erase Cycle Counter options ( -y -Y n ) should be removed from usage Message
	* main.c (usage): remove -y / -Y descriptions

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega8A): new device (alias for ATmega8)

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #50517: Reading fails if "immediate mode" for output file format is selected - fileio: invalid operation=1
	* update.c (do_op): refuse to write to "immediate format" argument

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Martin Thierer:
	bug #60863: avrftdi programming error probably caused by multiple, consecutive empty pages
	* avrftdi.c (avrftdi_flash_write): Skip empty pages

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Matwey V. Kornilov:
	bug #58495: Add atmega324pb support to avrdude.conf.in
	* avrdude.conf.in (ATmega324PB): new entry

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #55734: USBtiny programming of ATmega328p broken by Patch #9278
	* usbtiny.c (usbtiny_initialize): undo change from patch #9728

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #55009: no efuses for m164a/pa
	* avrdude.conf.in (ATmega164P): derive from ATmega324P

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by evan Venn:
	bug #59227: Add new part. How does one get a part added to the CONF file?
	* avrdude.conf.in (LGT8FX88P, LGT8FX168P, LGT8FX328P): new parts

2021-11-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Britton Kerin:
	bug #57453: [PATCH] fix reference to nonexistant -m option by changing to -U
	* avrdude.1: replace -m option by -U

2021-11-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Andrew D'Addesio:
	bug #58078: [PATCH] buspirate: remove compound literals (fixes GCC>=9)
	* buspirate.c (buspirate_start_mode_bin):
	avoid propagating local scope compound literals
