@@ -889,6 +889,16 @@ programmer
   usbpid     = 0x0BA5;
 ;
 
+# commercial version of USBtiny, using a separate VID/PID
+programmer
+  id    = "iseavrprog";
+  desc  = "USBtiny-based USB programmer, https://github.com/IowaScaledEngineering/ckt-avrprogrammer";
+  type  = "usbtiny";
+  connection_type = usb;
+  usbvid     = 0x1209;
+  usbpid     = 0x6570;
+;
+
 programmer
   id    = "butterfly";
   desc  = "Atmel Butterfly Development Board";
